tests/NormalTests/paczka1/small_fuzzy/38299843.err
Error in line 10: cctn70RJI A924 98,6
Error in line 14: cctn70RJI A489 2,04
Error in line 7: haXOLsDpW6 A309 214,5
